Tout fonctionne sauf connexion

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=ad3db2f26599d0466032e8bae756b8d3
+APP_SECRET=96aeebc5d488935c682ec2be3ddca975
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -38,4 +38,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 MAILER_DSN=null://null
+###< symfony/mailer ###
+
+# Mode de transport (async ou sync)
+MESSENGER_TRANSPORT_DSN=sync://
 ###< symfony/mailer ###
