--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,3 +37,30 @@ when@test:
                 cost: 4 # Lowest possible value for bcrypt
                 time_cost: 3 # Lowest possible value for argon
                 memory_cost: 10 # Lowest possible value for argon
+
+    encoders:
+        App\Entity\User:
+            algorithm: bcrypt
+
+    # Définir les rôles et les accès
+    access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/subscriber, roles: ROLE_USER }
+        - { path: ^/newsletter, roles: ROLE_ADMIN }
+        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
+    providers:
+        app_user_provider:
+            entity:
+                class: App\Entity\Subscriber
+                property: email
+
+    firewalls:
+        main:
+            anonymous: true
+            form_login:
+                login_path: app_login
+                check_path: app_login
+            logout:
+                path: app_logout
+                target: app_home
